# Whisper-Pro-ASR

./:  .pylintrc  .coderabbit.yaml  .coveragerc  .dockerignore  .gitignore  .htmlhintrc  .pylintrc  .stylelintrc.json  .yamllint  Dockerfile  Dockerfile.test  Instructions.md  LICENSE  README.md  build-and-test.ps1  build-and-test.sh  check_coverage.py  docker-compose.yml  eslint.config.cjs  generate_badge.ps1  package-lock.json  package.json  pylint_report.txt  pyproject.toml  pytest.ini  requirements.txt  test_requirements.txt  vitest.config.cjs  whisper_pro_asr.py  whisper_server.py
.agent/: instructions.md
.agent/skills/: SKILLS_CATALOG.md  agent_asset_maintenance_skill.md  api_contract_validation_skill.md  bazarr_integration_skill.md  ci_quality_gates_skill.md  concurrency_orchestration_skill.md  doc_update_skill.md  docker_runtime_ops_skill.md  frontend_quality_gates_skill.md  intel_hardware_inference_skill.md  language_detection_priority_skill.md  model_lifecycle_management_skill.md  monitoring_telemetry_dashboard_skill.md  pipeline_skill.md  prepare_release_skill.md  release_skill.md  resolve-pr-comments-run.sh  resolve-pr-comments.md  storage_persistence_hygiene_skill.md  task_status_display_specification_skill.md  testing_strategy_skill.md  troubleshooting_playbook_skill.md
.agent/workflows/: build.md  test.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  CONCURRENCY.md  DOCKERHUB_DESCRIPTION.md  GITHUB_RELEASE_v1.0.1.md  GITHUB_RELEASE_v1.0.4.md  Instructions.md  SETUP.md  TUNING.md
docs/releases/: GITHUB_RELEASE_v1.0.2.md  GITHUB_RELEASE_v1.0.3.md  GITHUB_RELEASE_v1.0.4.md  GITHUB_RELEASE_v1.0.5.md  GITHUB_RELEASE_v1.0.6.md  GITHUB_RELEASE_v1.1.0.md  GITHUB_RELEASE_v1.1.1.md  GITHUB_RELEASE_v1.1.2.md  GITHUB_RELEASE_v1.1.3.md  GITHUB_RELEASE_v1.1.4.md  GITHUB_RELEASE_v1.2.0.md
modules/: __init__.py  bootstrap.py  config.py  constants.py  dashboard.py  history_manager.py  intel_engine.py  language_detection.py  logging_setup.py  metrics_discovery.py  model_manager.py  preprocessing.py  routes.py  subtitles.py  telemetry_manager.py  utils.py  vad.py
modules/api/: __init__.py  routes_asr.py  routes_detect.py  routes_system.py  routes_utils.py
modules/core/: __init__.py  bootstrap.py  config.py  config_helpers.py  constants.py  engine_registry.py  logging_setup.py  subtitles.py  utils.py  utils_helpers.py
modules/inference/: __init__.py  concurrency.py  diarization.py  engine_factory.py  intel_engine.py  language_detection.py  language_detection_core.py  model_manager.py  post_processing.py  preprocessing.py  scheduler.py  scheduler_ordering.py  scheduler_state_helpers.py  scheduler_task_helpers.py  vad.py
modules/monitoring/: __init__.py  analytics.html  analytics_ui.py  dashboard.html  dashboard.py  dashboard_ui.py  history_manager.py  metrics_discovery.py  telemetry.py  telemetry_manager.py
scripts/: check_metrics.py  export_models.py  preload_model.py
scripts/ci/: build-and-test.sh
static/: swagger-theme.css
tests/: __init__.py  check_coverage.py  conftest.py  conftest_bootstrap.py  mock_setup.py  run_suite.sh  test_config.py  test_coverage_logic.py  test_history_manager_edge.py  test_intel_engine.py  test_language_detection.py  test_logging.py  test_model_manager.py  test_model_manager_filters.py  test_preprocessing.py  test_preprocessing_segmenting.py  test_ram_optimization.py  test_routes.py  test_scheduler.py  test_server.py  test_ssd_optimization.py  test_telemetry.py  test_utils.py  test_utils_hygiene.py  test_vad.py
tests/e2e/: dashboard-fixture-server.cjs
tests/inference/: test_concurrency_coverage_edges.py  test_diarization.py  test_engine_factory.py  test_intel_engine.py  test_language_detection.py  test_model_manager.py  (+5 more)
(+74 files in other folders)
