[tool.poetry]
name = "whisper-pro-asr"
version = "1.1.4"
description = "Enterprise-grade Whisper Automatic Speech Recognition web service"
authors = ["DeepMind Team"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = ">=0.138.0"
uvicorn = { version = ">=0.30.0", extras = ["standard"] }
python-multipart = ">=0.0.18"
faster-whisper = "~=1.2.1"
tokenizers = "~=0.21.0"
ctranslate2 = ">=4.5.0"
torch = "~=2.8.0"
torchaudio = "~=2.8.0"
torchvision = "~=0.23.0"
colorlog = "~=6.10.1"
pyyaml = "~=6.0.3"
requests = "~=2.32.5"
pydub = "~=0.25.1"
psutil = "~=7.2.1"
tqdm = "~=4.67.1"
soundfile = "~=0.13.1"
ffmpeg-python = "~=0.2.0"
librosa = "~=0.10.2"
openvino = "~=2026.2.1"
openvino-genai = "~=2026.2.1"
openvino-tokenizers = "~=2026.2.1"
numpy = "~=2.4.0"
transformers = "~=4.48.2"
huggingface-hub = "~=0.32.6"
whisperx = ">=3.8.6"
audio-separator = "~=0.41.1"

[tool.poetry.group.dev.dependencies]
pytest = "~=8.3.5"
pytest-cov = "~=6.0.0"
requests-mock = "~=1.11.0"
yamllint = "~=1.35.1"
ruff = ">=0.3.0"
pylint = ">=3.0.0"
numpy = "~=2.4.0"
fastapi = ">=0.138.0"
uvicorn = { version = ">=0.30.0", extras = ["standard"] }
python-multipart = ">=0.0.18"
psutil = "~=7.2.1"
coverage-badge = "^1.1.2"
setuptools = "<=80.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["scripts"]
# Target Python version
target-version = "py312"

# Linting configuration
line-length = 120

[tool.ruff.lint]
# Enable rules (Pyflakes, pycodestyle, isort, etc.)
select = ["E", "F", "I", "W"]
ignore = ["E501", "E402", "E741"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
