[tool.poetry]
name = "whisper-pro-asr"
version = "1.2.0"
description = "Enterprise-grade Whisper Automatic Speech Recognition web service"
authors = ["DeepMind Team"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "0.139.2"
uvicorn = { version = "0.51.0", extras = ["standard"] }
python-multipart = "0.0.32"
colorlog = "6.11.0"
pyyaml = "6.0.3"
requests = "2.34.2"
pydub = "0.25.1"
psutil = "7.2.2"
tqdm = "4.68.4"
soundfile = "0.14.0"
ffmpeg-python = "0.2.0"
numpy = "2.4.6"

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
faster-whisper = "1.2.1"
tokenizers = "0.21.4"
ctranslate2 = "4.8.1"
torch = "2.8.0"
torchaudio = "2.8.0"
torchvision = "0.23.0"
librosa = "0.11.0"
openvino = "2026.2.1"
openvino-genai = "2026.2.1.0"
openvino-tokenizers = "2026.2.1.0"
transformers = "4.48.3"
huggingface-hub = "0.36.2"
whisperx = "3.8.6"
audio-separator = "0.44.3"

[tool.poetry.group.dev.dependencies]
pytest = "9.1.1"
pytest-cov = "7.1.0"
genbadge = { version = "1.1.3", extras = ["coverage"] }
requests-mock = "1.12.1"
yamllint = "1.38.0"
ruff = "0.15.22"
flake8 = "7.3.0"
pylint = "4.0.6"
black = "26.5.1"
isort = "8.0.1"
radon = "^6.0.1"
check-jsonschema = "0.37.4"
taplo = "0.9.3"
bandit = "1.9.4"
pip-audit = "2.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["scripts", "node_modules"]
# Target Python version
target-version = "py312"

# Linting configuration
line-length = 140

[tool.ruff.lint]
# Enable rules (Pyflakes, pycodestyle, isort, etc.)
select = ["E", "F", "I", "W"]
ignore = ["E501", "E402", "E741"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 140
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 140
